fix: dont wrap keys

--- a/styles/Features.module.scss
+++ b/styles/Features.module.scss
@@ -63,8 +63,16 @@
 
   th,
   td {
-    padding: 0.1em 0;
+    padding: 0.1em 0.5em 0.1em 0;
     vertical-align: top;
+
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+
+  kbd {
+    white-space: nowrap;
   }
 
   kbd > kbd {
